oauth2-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-proxy
  labels:
    app: auth-proxy
spec:
  selector:
    matchLabels:
      app: auth-proxy
  replicas: 1
  template:
    metadata:
      name: auth-proxy
      labels:
        app: auth-proxy
    spec:
      containers:
      - args:
        - -provider=github
        - -upstream=file:///dev/null
        - -http-address=0.0.0.0:4180
        - -client-id=75e8649f2c974f17848d
        - -client-secret=CLIENT_SECRET
        - -cookie-domain=.localhost
        - -cookie-refresh=1h
        - -cookie-secret=COOKIE_SECRET
        image: quay.io/pusher/oauth2_proxy:v6.0.0-amd64
        name: oauth2-proxy
        livenessProbe:
          httpGet:
            port: 4180
            path: /ping
        readinessProbe:
          httpGet:
            port: 4180
            path: /ping
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
        volumeMounts:
        - name: application-config-volume
          mountPath: /config/rescue/
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: "application-config-volume"
        configMap:
          name: "application-configmap"
      restartPolicy: Always
