echo-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Private CA
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "private-ca-issuer"
    # For TLS termination
    # nginx.ingress.kubernetes.io/auth-tls-verify-client: \"on\"
    nginx.ingress.kubernetes.io/auth-tls-secret: \"default/my-certs\"
spec:
  tls:
  - hosts:
    - animalrescue.online
    secretName: my-certs
  rules:
  - host: animalrescue.online
    http:
      paths:
      - path: /echo1
        backend:
          serviceName: echo1
          servicePort: 80
      - path: /echo2
        backend:
          serviceName: echo2
          servicePort: 80
