echo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - host: animalrescue.online
    http:
      paths:
      - path: /echo1
        backend:
          serviceName: echo1
          servicePort: 80
      - path: /echo2
        backend:
          serviceName: echo2
          servicePort: 80
